--- a/Subscriber/app/index.html
+++ b/Subscriber/app/index.html
@@ -27,6 +27,8 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="http://localhost:3000/socket.io/socket.io.js"></script>
+  <script src="
+https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
